force-app/main/default/objects/GitHub_Repos__x/GitHub_Repos__x.object-meta.xml
<CustomObject>
    <description>GitHub Repos</description>
    <externalDataSource>Repo</externalDataSource>
    <externalName>GitHub Repos</externalName>
    <label>GitHub Repos</label>
    <pluralLabel>GitHub Repos</pluralLabel>
</CustomObject>