force-app/main/default/objects/GitHub_Repos__x/fields/Fork__c.field-meta.xml
<CustomField>
    <fullName>Fork__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fork</description>
    <externalDeveloperName>Fork</externalDeveloperName>
    <label>Fork</label>
    <type>Checkbox</type>
</CustomField>