force-app/main/default/objects/GitHub_Repos__x/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language</description>
    <externalDeveloperName>Language</externalDeveloperName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>