force-app/main/default/objects/GitHub_Repos__x/fields/LanguagesUrl__c.field-meta.xml
<CustomField>
    <fullName>LanguagesUrl__c</fullName>
    <description>LanguagesUrl</description>
    <externalDeveloperName>LanguagesUrl</externalDeveloperName>
    <label>LanguagesUrl</label>
    <type>Url</type>
</CustomField>