force-app/main/default/objects/GitHub_Repos__x/fields/LastPushedDate__c.field-meta.xml
<CustomField>
    <fullName>LastPushedDate__c</fullName>
    <description>LastPushedDate</description>
    <externalDeveloperName>LastPushedDate</externalDeveloperName>
    <label>LastPushedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>