force-app/main/default/objects/GitHub_Repos__x/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>License</description>
    <externalDeveloperName>License</externalDeveloperName>
    <label>License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>