force-app/main/default/objects/GitHub_Repos__x/fields/OpenIssuesCount__c.field-meta.xml
<CustomField>
    <fullName>OpenIssuesCount__c</fullName>
    <description>Open Issues Count</description>
    <externalDeveloperName>OpenIssuesCount</externalDeveloperName>
    <label>Open Issues Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>