force-app/main/default/objects/GitHub_Repos__x/fields/OwnerLogin__c.field-meta.xml
<CustomField>
    <fullName>OwnerLogin__c</fullName>
    <description>OwnerLogin</description>
    <externalDeveloperName>OwnerLogin</externalDeveloperName>
    <label>OwnerLogin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>