force-app/main/default/objects/GitHub_Repos__x/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Private</description>
    <externalDeveloperName>Private</externalDeveloperName>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>