force-app/main/default/objects/GitHub_Repos__x/fields/RepoCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>RepoCreatedDate__c</fullName>
    <description>RepoCreatedDate</description>
    <externalDeveloperName>RepoCreatedDate</externalDeveloperName>
    <label>RepoCreatedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>