force-app/main/default/objects/GitHub_Repos__x/fields/RepositoryURL__c.field-meta.xml
<CustomField>
    <fullName>RepositoryURL__c</fullName>
    <description>Repository URL</description>
    <externalDeveloperName>RepositoryURL</externalDeveloperName>
    <label>Repository URL</label>
    <type>Url</type>
</CustomField>