force-app/main/default/objects/GitHub_Repos__x/fields/RepoUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>RepoUpdatedDate__c</fullName>
    <description>RepoUpdatedDate</description>
    <externalDeveloperName>RepoUpdatedDate</externalDeveloperName>
    <label>RepoUpdatedDate</label>
    <type>DateTime</type>
</CustomField>