force-app/main/default/objects/GitHub_Repos__x/fields/TotalForks__c.field-meta.xml
<CustomField>
    <fullName>TotalForks__c</fullName>
    <description>TotalForks</description>
    <externalDeveloperName>TotalForks</externalDeveloperName>
    <label>TotalForks</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>