force-app/main/default/objects/GitHub_Repos__x/fields/Watchers__c.field-meta.xml
<CustomField>
    <fullName>Watchers__c</fullName>
    <description>Watchers</description>
    <externalDeveloperName>Watchers</externalDeveloperName>
    <label>Watchers</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>